# CBwaves

./: CMakeLists.txt
examples/: CBwaves.ini  test_cbwaves_1_1.des  test_cbwaves_1_1.ini  test_cbwaves_2_2.des  test_cbwaves_2_2.ini  test_cbwaves_3_3.des  test_cbwaves_3_3.ini  test_cbwaves_4_4.des
inc/: Config.hpp  PDE.hpp
include/: Config.hpp  Corrections.hpp  DynamicalParams.hpp  InitParams.hpp  PDE.hpp  Vector.hpp
script/: lv.plt
src/: CorrectionsAccTerms.cpp  CorrectionsHTerms.cpp  DynamicalParams.cpp  Main.cpp  PDE_Test.cpp  cbwaves.cxx
